Testing stuff more

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hell0 W0rld</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>I'm hosted with GitHub Pages. Doesn't seem to refresh correctly.</p>
 </body>
 </html>
