--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
 </main>
     <footer>
-        <h6> | 
+        <h6>Copyright © Gijutsu | 
             Rendered by <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            <a href="https://www.gijutsu.netindex.xml">Subscribe</a></h6>
+            <a href="https://www.gijutsu.net/index.xml">Subscribe</a></h6>
     </footer>
 </div>
 <script src="/js/scripts.js"></script>
