--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h2>About Me</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>I'm a software developer passionate about creating user-friendly desktop applications and contributing to open source projects.</p>
+                        <p>I'm a hobbyist software developer passionate about creating user-friendly desktop applications and contributing to open source projects.</p>
                         <p>I enjoy working with modern technologies and frameworks to build cross-platform solutions that solve real-world problems.</p>
                         
                         <h3>Skills & Technologies</h3>
