Add re-arch project to featured projects section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,25 @@
                         </div>
                     </div>
                     
-                    <!-- Add more project cards here as needed -->
+                    <div class="project-card">
+                        <div class="project-info">
+                            <h3>re-arch</h3>
+                            <p>A modern architecture framework for building scalable and maintainable applications with clean separation of concerns.</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">Architecture</span>
+                                <span class="tech-tag">Framework</span>
+                                <span class="tech-tag">Clean Code</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://github.com/buggerman/re-arch" target="_blank">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                                <a href="https://buggerman.github.io/re-arch/" target="_blank">
+                                    <i class="fas fa-globe"></i> Documentation
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
